--- a/main.css
+++ b/main.css
@@ -8,7 +8,6 @@ body {
 }
 a {
   display: inline-block;
-  max-width: 100px;
 
   text-decoration: none;
   font-family: inherit;
@@ -17,6 +16,13 @@ a {
 a:hover,
 a:focus {
   text-decoration: underline;
+}
+a:focus {
+  transform: scale(1.1);
+  outline: none;
+}
+button:focus {
+  outline: 1px solid #585858;
 }
 p {
   color: #585858;
@@ -50,11 +56,16 @@ li {
   cursor: pointer;
   transition: all linear 0.3s;
 }
-.btn:hover {
+.btn:hover,
+.btn:focus {
   transform: translate(4px, 4px);
   box-shadow: -4px -4px rgba(73, 73, 73, 0.4);
+  outline: none;
 }
-
+.btn:active {
+  transform: scale(0.9);
+  box-shadow: -2px -2px rgba(73, 73, 73, 0.4);
+}
 .wrapper-black {
   box-sizing: border-box;
   min-height: 900px;
@@ -136,9 +147,18 @@ li {
 
 .cv-btn {
   margin: 0 auto;
-
   background: #fff;
   color: #000;
+  animation: appearance 0.3s linear;
+}
+@keyframes appearance {
+  0% {
+    padding: 0;
+    height: 0px;
+  }
+  100% {
+    height: auto;
+  }
 }
 
 .cv-btn:after {
@@ -169,12 +189,15 @@ li {
   transition: all linear 0.3s;
 }
 
-.social-item:hover {
+.social-item:hover,
+.social-item:focus {
   opacity: 1;
 }
+
 .social-item:hover span {
   display: inline;
 }
+
 .social-item span {
   display: none;
   padding-left: 10px;
@@ -327,7 +350,7 @@ li {
 }
 .section-text {
   margin: 0 auto;
-  width: 420px;
+  max-width: 420px;
   text-align: center;
 }
 /*features*/
@@ -404,6 +427,10 @@ li {
 .services-item.black {
   background: #000;
   color: #fff;
+}
+
+.services-title {
+  margin: 16px 0 24px;
 }
 
 /*works*/
@@ -523,4 +550,432 @@ li {
   .works-content {
     width: 49% !important;
   }
+}
+
+/*blog*/
+.blog {
+  position: relative;
+}
+
+.blog:after {
+  position: absolute;
+  content: "";
+  bottom: 5%;
+  left: 2%;
+  height: 100px;
+  width: 100px;
+  background: url(img/icons/shape.svg) no-repeat center;
+}
+
+.blog-list {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 150px;
+}
+.blog-item {
+  padding: 8px;
+  box-shadow: 0px 0px 9px 0px rgba(195, 195, 195, 0.26);
+}
+
+.big-item {
+  width: 40%;
+  box-shadow: 0px 0px 9px 0px rgba(73, 73, 73, 0.4);
+}
+.big-item .blog-item {
+  box-shadow: none;
+}
+.blog-content {
+  padding: 15px;
+}
+.blog-content span {
+  white-space: nowrap;
+  font-size: 12px;
+  color: #9d9d9d;
+  padding-left: 24px;
+  margin-right: 15px;
+  position: relative;
+}
+
+.blog-img img {
+  width: 100%;
+  display: block;
+  height: 100%;
+  object-fit: cover;
+}
+.small-items {
+  width: 56%;
+}
+.small-items .blog-item:first-child {
+  margin-bottom: 25px;
+}
+.small-items .blog-img {
+  width: 40%;
+  background: #9d9d9d;
+}
+.small-items .blog-item {
+  display: flex;
+  align-items: stretch;
+}
+.small-items .blog-content {
+  width: 60%;
+}
+
+.author::before,
+.time:before,
+.date:before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 15px;
+  height: 15px;
+}
+.author::before {
+  background-image: url(img/icons/user.svg);
+}
+.time:before {
+  background-image: url(img/icons/clock.svg);
+}
+.date:before {
+  background-image: url(img/icons/calendar.svg);
+}
+.blog-title {
+  margin: 24px 0;
+  font-size: 20px;
+  color: #585858;
+}
+
+.blog-content p {
+  color: #9d9d9d;
+}
+
+.blog-link {
+  text-transform: uppercase;
+  color: #585858;
+}
+
+/*reviews*/
+.reviews {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #000;
+  padding-top: 160px;
+  padding-bottom: 160px;
+}
+
+.reviews .section-header {
+  width: 33.333%;
+  color: #9d9d9d;
+}
+.reviews .section-title {
+  padding-top: 0;
+  color: #fff;
+  text-align: left;
+}
+.reviews .section-text {
+  text-align: left;
+}
+/*revies slider*/
+
+.reviews-slider {
+  position: relative;
+  width: 53.333%;
+}
+.slide {
+  padding: 40px 60px;
+  background: #fff;
+  border-radius: 20px;
+  box-sizing: border-box;
+  text-align: center;
+}
+.slide-text {
+  margin-bottom: 40px;
+}
+
+.review-author {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  text-align: left;
+}
+
+.review-author p {
+  max-width: 50%;
+  color: #282828;
+}
+.review-author img {
+  width: 80px;
+}
+
+.review-author span {
+  display: block;
+
+  font-size: 16px;
+  color: #585858;
+}
+
+.dots {
+  text-align: center;
+}
+
+.dot {
+  display: inline-block;
+  width: 24px;
+  height: 7px;
+
+  background-color: #f7f7f7;
+  border: none;
+  cursor: pointer;
+}
+
+.active,
+.dot:hover {
+  opacity: 0.8;
+}
+
+.fade {
+  animation: fade 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.1;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/*brands*/
+.brands {
+  position: relative;
+}
+
+.brands:after {
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  content: "";
+  width: 50px;
+  height: 50px;
+  margin-top: -25px;
+  background: url(img/icons/ellipse-small.svg) no-repeat;
+  background-size: 50px;
+}
+
+.brands-slider {
+  margin: 0 auto;
+  width: 940px;
+  height: 200px;
+
+  position: relative;
+}
+
+.brands-wrapper {
+  overflow: hidden;
+  background: #fefefe;
+  z-index: 1;
+}
+
+#brands-items {
+  width: 100000px;
+  position: relative;
+  top: 0;
+  left: 0px;
+}
+
+#brands-items.shifting {
+  transition: left 0.3s ease-out;
+}
+
+.brands-slide {
+  width: 940px;
+  height: 200px;
+  cursor: pointer;
+  float: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: all 1s;
+  position: relative;
+  background: #fff;
+}
+.logos {
+  display: flex;
+  justify-content: space-between;
+}
+.brands-slide img {
+  display: block;
+  width: 20%;
+}
+
+/*navigation*/
+
+.control {
+  position: absolute;
+  top: 50%;
+  width: 20px;
+  height: 50px;
+  margin-top: -25px;
+
+  background: #414141;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
+  z-index: 10;
+}
+
+.prev,
+.next {
+  background-size: 10px;
+  background-position: center;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+}
+
+.prev {
+  background-image: url(img/icons/arr-left.svg);
+  left: -50px;
+}
+
+.next {
+  background-image: url(img/icons/arr-right.svg);
+  right: -50px;
+}
+
+.prev:active,
+.next:active {
+  background-size: 7px;
+}
+
+/*contacts*/
+
+.contact {
+  display: flex;
+  justify-content: space-between;
+  padding: 50px 160px;
+  background: #000;
+}
+
+.contact .section-header {
+  width: 40%;
+}
+
+.contact .section-text,
+.contact .section-title {
+  margin-bottom: 30px;
+  color: #d8d8d8;
+  text-align: left;
+}
+
+.contact .section-title {
+  color: #fff;
+  font-size: 38px;
+}
+.section-contacts {
+  display: table;
+  padding: 8px 0 16px;
+  color: #dcdcdc;
+
+  border-bottom: solid 1px #111111;
+}
+.contact .contact-form {
+  width: 50%;
+  padding: 60px 35px 50px;
+  background: #0c0c0c;
+}
+
+.contact-form form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.contact-form input,
+#contact-comments {
+  margin-bottom: 30px;
+  padding: 20px;
+  box-sizing: border-box;
+  font-family: inherit;
+  background: #1c1c1c;
+  color: #9d9d9d;
+  border: none;
+}
+.contact-form input:focus,
+#contact-comments:focus {
+  outline: 2px solid #9d9d9d;
+}
+
+.contact-form input {
+  height: 45px;
+}
+
+#contact-name,
+#contact-mail {
+  margin-bottom: 30px;
+  width: 48%;
+}
+
+#contact-phone,
+#contact-comments {
+  width: 100%;
+}
+
+#contact-comments {
+  height: 170px;
+  overflow-y: scroll;
+}
+
+/*scroll*/
+
+#contact-comments::-webkit-scrollbar {
+  width: 8px;
+}
+#contact-comments::-webkit-scrollbar-button {
+  display: none;
+}
+#contact-comments::-webkit-scrollbar-track {
+  background-color: #666;
+}
+#contact-comments::-webkit-scrollbar-track-piece {
+  background-color: #666;
+}
+#contact-comments::-webkit-scrollbar-thumb {
+  height: 100px;
+  background-color: #dcdcdc;
+  border-radius: 10px;
+}
+#contact-comments::-webkit-scrollbar-corner {
+  background-color: #ebebeb;
+}
+#contact-comments::-webkit-resizer {
+  background-color: #666;
+}
+
+.contact-btn {
+  margin: 0 auto;
+  padding: 15px 20px;
+  background: #000;
+  border: none;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+/*footer*/
+
+.footer {
+  min-height: 55px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: #0c0c0c;
+  text-align: center;
+}
+
+.footer p {
+  color: #dcdcdc;
 }
