--- a/main.css
+++ b/main.css
@@ -191,7 +191,6 @@ li {
 .main {
   display: flex;
   align-items: center;
-  min-height: 100vh;
 }
 .main-item {
   width: 49.9999%;
@@ -247,7 +246,7 @@ li {
 }
 .social {
   position: absolute;
-  top: 210px;
+  top: 20%;
   right: -50px;
 }
 .social-item {
@@ -263,7 +262,9 @@ li {
 }
 
 .social-item:hover span {
-  display: inline;
+  display: block;
+  background: #000;
+  opacity: 1;
 }
 
 .social-item span {
@@ -271,8 +272,10 @@ li {
   padding-left: 10px;
   position: absolute;
   top: 50%;
+  left: 100%;
   transform: translateY(-50%);
-  opacity: 0.8;
+  opacity: 0.2;
+  transition: all 0.3s linear;
 }
 
 /*important*/
@@ -282,8 +285,8 @@ li {
 }
 
 .important-item {
-  width: 390px;
-  padding: 50px;
+  width: 30%;
+  padding: 40px;
   background: #fff;
   color: #000;
   box-shadow: 0px 0px 9px 0px rgba(73, 73, 73, 0.4);
@@ -1053,6 +1056,9 @@ li {
   body {
     font-size: 14px;
   }
+  .wrapper {
+    padding: 0 60px;
+  }
 
   /*main*/
   .main-item {
@@ -1069,6 +1075,24 @@ li {
   .main-item p {
     line-height: 20px;
   }
+
+  /*social*/
+  .social {
+    top: 10px;
+    left: 0px;
+    right: 0px;
+  }
+  .social-list {
+    display: flex;
+  }
+  .social-item {
+    margin-right: 20px;
+  }
+
+  /*important*/
+  .important-item {
+    padding: 30px;
+  }
 }
 
 @media (max-width: 770px) {
@@ -1076,6 +1100,7 @@ li {
   .main-item h1 {
     margin-bottom: 30px;
     font-size: 23px;
+    text-align: left;
   }
   .main-item p {
     text-align: left;
@@ -1094,6 +1119,14 @@ li {
   .nav-burger {
     display: block;
   }
+  /*important*/
+  .important-list {
+    flex-wrap: wrap;
+  }
+
+  .important-item {
+    width: 100%;
+  }
 }
 @media (max-width: 575px) {
   /*main*/
@@ -1102,7 +1135,18 @@ li {
     flex-wrap: wrap;
   }
   .main-item {
+    margin-top: 0;
     width: 100%;
+  }
+  .main-item h1 {
+    margin-top: 0;
+  }
+  .main-item p,
+  .main-item h1 {
+    text-align: center;
+  }
+  .cv-btn {
+    margin: 0 auto;
   }
   .main-photo {
     width: 100%;
@@ -1110,37 +1154,3 @@ li {
 }
 @media (max-width: 320px) {
 }
-/* 
-
-
-.main {
-  display: flex;
-  align-items: center;
-  min-height: 100vh;
-}
-.main-item {
-  width: 49.9999%;
-  margin: 100px 100px 50px 0;
-}
-
-.main-item h1 {
-  margin-bottom: 40px;
-  font-size: 50px;
-  line-height: 60px;
-  text-align: center;
-  text-transform: initial;
-}
-
-.main-item p {
-  margin-bottom: 40px;
-  color: #fff;
-  line-height: 28px;
-  text-align: center;
-}
-
-.cv-btn {
-  margin: 0 auto;
-  background: #fff;
-  color: #000;
-  animation: appearance 0.3s linear;
-} */
