--- a/main.css
+++ b/main.css
@@ -40,7 +40,7 @@ li {
   margin: 0 auto;
   max-width: 1080px;
   padding: 0 160px;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .btn {
@@ -68,15 +68,23 @@ li {
   box-shadow: -2px -2px rgba(73, 73, 73, 0.4);
 }
 .wrapper-black {
+  position: relative;
   box-sizing: border-box;
-
-  background: #000;
-  background-image: url(img/bg-header.jpg);
-  background-repeat: no-repeat;
+  background: linear-gradient(190deg, black, black 80%, white 40%);
   background-size: 100% 100%;
 
   color: #fff;
   transition: all linear 0.2s;
+}
+.wrapper-black::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: -50px;
+  background-image: url(img/icons/ellipse.svg);
+  background-size: 100% 100%;
+  width: 100px;
+  height: 100px;
 }
 .white {
   color: #dcdcdc;
@@ -282,9 +290,13 @@ li {
 }
 
 /*important*/
-
+.important {
+  position: relative;
+  z-index: 1;
+}
 .important-list {
   display: flex;
+  margin-bottom: 5px;
 }
 
 .important-item {
@@ -446,7 +458,8 @@ li {
 .features::after {
   content: "";
   position: absolute;
-  left: 40%;
+  bottom: 0;
+  left: 50%;
   background: url(img/icons/ellipse.svg) no-repeat 100%;
   width: 122px;
   height: 122px;
@@ -1193,6 +1206,10 @@ li {
     width: 100%;
     padding-left: 30%;
   }
+  .features::before {
+    top: 15px;
+    left: 50%;
+  }
   /*services*/
   .services-item {
     width: 46%;
@@ -1252,8 +1269,9 @@ li {
     flex-wrap: wrap;
   }
   .main-item {
-    margin-top: 0;
-    width: 100%;
+    margin: 0 auto;
+    width: auto;
+    padding: 10px 0 40px;
   }
   .main-item h1 {
     margin-top: 0;
@@ -1281,7 +1299,7 @@ li {
     left: -5px;
   }
 }
-@media (max-width: 320px) {
+@media (max-width: 400px) {
   /*works gallery*/
   .works-content {
     width: 98% !important;
