--- a/main.css
+++ b/main.css
@@ -237,19 +237,10 @@ li {
 }
 
 .cv-btn {
+  position: relative;
   margin: 0 auto;
   background: #fff;
   color: #000;
-  animation: appearance 0.3s linear;
-}
-@keyframes appearance {
-  0% {
-    padding: 0;
-    height: 0px;
-  }
-  100% {
-    height: auto;
-  }
 }
 
 .cv-btn:after {
@@ -314,6 +305,7 @@ li {
 }
 
 .important-item {
+  opacity: 0;
   width: 30%;
   padding: 40px;
   background: #fff;
@@ -1330,5 +1322,61 @@ li {
   #contact-name,
   #contact-mail {
     width: 100%;
+  }
+}
+
+.flip-in-x {
+  animation: flip-in-x 0.75s ease both;
+  animation-fill-mode: forwards;
+}
+
+.flip-in-x:nth-child(2) {
+  animation-delay: 0.1s;
+}
+
+.flip-in-x:nth-child(3) {
+  animation-delay: 0.2s;
+}
+.flip-in-x:nth-child(4) {
+  animation-delay: 0.3s;
+}
+.flip-in-x:nth-child(5) {
+  animation-delay: 0.4s;
+}
+.flip-in-x:nth-child(6) {
+  animation-delay: 0.5s;
+}
+
+@keyframes flip-in-x {
+  0% {
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 0;
+    -webkit-transform: perspective(400px) rotateY(90deg);
+    transform: perspective(400px) rotateY(90deg);
+  }
+
+  40% {
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    -webkit-transform: perspective(400px) rotateY(-20deg);
+    transform: perspective(400px) rotateY(-20deg);
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: perspective(400px) rotateY(10deg);
+    transform: perspective(400px) rotateY(10deg);
+  }
+
+  80% {
+    -webkit-transform: perspective(400px) rotateY(-5deg);
+    transform: perspective(400px) rotateY(5deg);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: perspective(400px);
+    transform: perspective(400px);
   }
 }
